--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #f6d050;
-    font-family: "Figtree";
+    font-family: "Figtree", Arial, Helvetica, sans-serif;
 }
 
 .parent-card {
@@ -59,10 +59,11 @@ body {
 }
 
 .content h1 {
+    font-size: 1rem;
     width: fit-content;
     background-color: #f6d050;
-    padding: 0px 15px 0px 15px;
-    border-radius: 10px;
+    padding: 1px 15px 1px 15px;
+    /* border-radius: 10px; */
     margin-bottom: 10px;
 }
 
